# skyproducts

./: manage.py  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: comand.py
catalog/migrations/: 0001_initial.py  0002_alter_blogwrite_is_published.py  0003_version.py  0004_blogwrite_author.py  0005_product_author.py  0006_remove_blogwrite_author.py  0007_remove_product_author.py  0008_blogwrite_author_product_author.py  0009_alter_product_options.py  0010_alter_product_options.py  0011_alter_product_options.py
catalog/templates/catalog/: base.html  blogwrite_confirm_delete.html  blogwrite_detail.html  blogwrite_form.html  blogwrite_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: photo_tags.py
djangoProject_catalog/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: catalog_data.json  category.json  product.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py  moderator.py
users/migrations/: 0001_initial.py  0002_user_c_code.py  0003_rename_c_code_user_v_code.py  0004_remove_user_v_code.py
users/templates/users/: email_confirmation_sent.html  email_confirmed.html  email_failed.html  login.html  register.html  user_form.html  user_password_reset.html  user_password_sent.html  user_password_set_new.html
users/templates/users/email/: password_reset_email.html
