[tool.poetry]
name = "djangoproject-catalog"
version = "0.1.0"
description = ""
authors = ["ryfe <denis.koptelev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.22.2"
slugify = "^0.0.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
