[tool.poetry]
name = "djangoproject-catalog"
version = "0.1.0"
description = ""
authors = ["ryfe <denis.koptelev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.22.2"
slugify = "^0.0.1"
pytils = "^0.4.1"
django-crispy-forms = "^2.1"
djoser = "^2.2.2"
python-jose = "^3.3.0"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
